# Vibecode

./: .env.example  .gitignore  =1.0  =2.0  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject. toml  pyproject.toml  requirements-service.txt
.github/: copilot-instructions.md
.vibecode/: config.toml  vibecode.db
Docs/: Build_Packet_6_7_Unified.md  Build_Packet_6_Pro_Shared_Databank.md  Build_Packet_8_Fixes.md  Known_Issues.md  VSCode_Extension_Testing_Guide.md  codex_build_brief.md
scripts/: build_release_graph.ps1
tests/: conftest.py  test_antigravity_config.py  test_audit_integration.py  test_audit_log_repository.py  test_auto_capture_service.py  test_capture_failure.py  test_capture_success.py  test_cli.py  test_confidence_decay_job.py  test_cursor_config.py  test_decay_scheduler_startup.py  test_doctor_extended.py  test_doctor_version_drift.py  test_edit_attribution.py  test_export_service.py  test_failure_repository.py  test_http_capture_routes.py  test_http_harvest_routes.py  test_http_injection_routes.py  test_http_memory_routes.py  test_http_report_routes.py  test_injection_merge.py  test_injection_service.py  test_json_store.py  test_json_to_sqlite_migration.py  test_local_service_health.py  test_mcp_pre_edit_check.py  test_mcp_security.py  test_mcp_tools.py  test_outcome_tracker.py  test_path_traversal.py  test_pattern_repository.py  test_pre_command_check.py  test_prevention_service.py  test_pro_sync_adapter.py  test_project_allowlist.py  test_project_rules.py  test_rate_limit_middleware.py  test_report_service.py  test_routes_observe.py  (+11 more)
(+273 files in other folders)
