[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecode"
version = "0.1.0"
description = "Local token-efficient AI coding memory"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.0",
    "platformdirs>=4.2",
    "rich>=13.7",
    "questionary>=2.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
vibecode = "vibecode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibecode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
